# zoom-impact-bot

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  railway.toml  requirements.txt  start.py
zoom_impact_bot/: cli.py  run.py  sheets.py
zoom_impact_bot/commands/: event_management.py  events.py  list_recognitions.py  recognition.py  templates.py  utils.py
